--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -16,8 +16,19 @@
     }
   }
   .app-activity-bar-item-active{
-   .iconfont{
+    .iconfont{
       color:#fff;
+    }
+  }
+}
+.app-activity-bar{
+  background-color: #fff;
+  .iconfont{
+    color:#333;
+  }
+  .app-activity-bar-item-active{
+    .iconfont{
+      color:#111;
     }
   }
 }
