--- a/src/index.less
+++ b/src/index.less
@@ -2,7 +2,12 @@ html,body{
   padding:0;
   margin:0;
   overflow: hidden;
+  font-family: -apple-system,BlinkMacSystemFont,sans-serif !important;
 }
 div{
   box-sizing: border-box;
+}
+::-webkit-scrollbar { /*滚动条整体样式*/
+  width: 0;     /*高宽分别对应横竖滚动条的尺寸*/
+  height: 0;
 }
