--- a/src/yui/tree/index.less
+++ b/src/yui/tree/index.less
@@ -3,7 +3,6 @@
   color:#333;
   .yui-tree-node,.yui-tree-leaf,.yui-tree-leaf-active{
     font-size: 12px;
-    padding:2px 0;
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -11,6 +10,7 @@
     font-weight: -apple-system,BlinkMacSystemFont,sans-serif;
     .yui-tree-label, .yui-tree-icon{
       height:100%;
+      width:100%;
       display: flex;
       align-items: center;
     }
