--- a/src/component/code/index.less
+++ b/src/component/code/index.less
@@ -1,4 +1,20 @@
 .app-code, .app-code-dark{
   height:100%;
   width:100%;
+  .app-tabs-menu{
+    width: 60px;
+    padding: 0 8px;
+    .app-tabs-menu-item:hover{
+      transition: .5s;
+      opacity: 1;
+    }
+    .app-tabs-menu-item{
+      display: flex;
+      opacity: .6;
+      width: 100%;
+      height: 30px;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
 }
