--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -17,7 +17,7 @@
   }
   .app-activity-bar-item-active{
     .iconfont{
-      color:#fff;
+      color:var(--theme-color);
     }
   }
 }
@@ -25,10 +25,5 @@
   background-color: #fff;
   .iconfont{
     color:#333;
-  }
-  .app-activity-bar-item-active{
-    .iconfont{
-      color:#111;
-    }
   }
 }
