--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -12,7 +12,7 @@
   .app-layout-footer{
     height:22px;
     width:100%;
-    background-color: #2c76ca;
+    background-color: var(--theme-color);
     color:#fff;
     font-size: 12px;
     padding:0 10px;
