--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -17,12 +17,17 @@
   }
   .app-activity-bar-item-active{
     .iconfont{
-      color:var(--theme-color);
+      color:#fff;
     }
   }
 }
 .app-activity-bar{
   background-color: #fff;
+  .app-activity-bar-item-active{
+    .iconfont{
+      color:#1e1e1e;
+    }
+  }
   .iconfont{
     color:#333;
   }
