--- a/src/component/sider-bar/search/index.less
+++ b/src/component/sider-bar/search/index.less
@@ -44,7 +44,7 @@
       justify-content: center;
       input{
         width:100%;
-        background: var(--theme-background-explorer-node-selected);
+        background: #333;
         border: 1px solid transparent;
         outline: none;
         height:25px;
@@ -58,11 +58,19 @@
       }
     }
   }
+}
+.app-search{
   .app-search-header-left{
     color:#1e1e1e !important;
   }
   .app-search-header-right{
     .iconfont{
+      color:#1e1e1e !important;
+    }
+  }
+  .app-search-input{
+    input{
+      background-color: #f2f2f2 !important;
       color:#1e1e1e !important;
     }
   }
