--- a/src/component/sider-bar/git/index.less
+++ b/src/component/sider-bar/git/index.less
@@ -36,7 +36,7 @@
   .app-git-body{
     width:100%;
     height:calc(~'100% - 40px');
-    .app-git-body-commit{
+    .app-git-input{
       width:100%;
       height:40px;
       padding: 0 8px;
@@ -45,7 +45,7 @@
       justify-content: center;
       input{
         width:100%;
-        background: var(--theme-background-explorer-node-selected);
+        background: #333;
         border: 1px solid transparent;
         outline: none;
         height:25px;
@@ -118,5 +118,11 @@
   }
   .app-git-body-change-title{
     color:#1e1e1e !important;
+  }
+  .app-git-input{
+    input{
+      background-color: #f2f2f2 !important;
+      color:#1e1e1e !important;
+    }
   }
 }
