--- a/src/component/code/index.less
+++ b/src/component/code/index.less
@@ -3,18 +3,23 @@
   width:100%;
   .app-tabs-menu{
     width: 80px;
-    padding: 0 8px;
     .app-tabs-menu-item:hover{
-      transition: .5s;
-      opacity: 1;
+      background: #333;
     }
     .app-tabs-menu-item{
       display: flex;
-      opacity: .6;
       width: 100%;
+      padding: 0 8px;
       height: 30px;
       align-items: center;
       justify-content: space-between;
+    }
+  }
+}
+.app-code{
+  .app-tabs-menu{
+    .app-tabs-menu-item:hover{
+      background: #aaa;
     }
   }
 }
