--- a/src/component/sider-bar/git/index.less
+++ b/src/component/sider-bar/git/index.less
@@ -84,13 +84,12 @@
   }
   .app-git-menu{
     width: 160px;
-    padding: 0 8px;
     .app-git-menu-item:hover{
-      opacity: 1;
+      background: #333;
     }
     .app-git-menu-item{
       display: flex;
-      opacity: .6;
+      padding: 0 8px;
       width: 100%;
       height: 30px;
       align-items: center;
