--- a/src/component/sider-bar/explorer/index.less
+++ b/src/component/sider-bar/explorer/index.less
@@ -51,14 +51,13 @@
   }
   .app-explorer-menu{
     width: 160px;
-    padding: 0 8px;
     .app-explorer-menu-item:hover{
-      opacity: 1;
+      background: #333;
     }
     .app-explorer-menu-item{
       display: flex;
-      opacity: .6;
       width: 100%;
+      padding: 0 8px;
       height: 30px;
       align-items: center;
       justify-content: space-between;
