--- a/src/component/sider-bar/search/index.less
+++ b/src/component/sider-bar/search/index.less
@@ -1,4 +1,6 @@
 .app-search, .app-search-dark{
+  width:100%;
+  height:100%;
   .app-search-header{
     height:40px;
     display: flex;
@@ -32,31 +34,53 @@
       }
     }
   }
-  .app-search-body{
-    overflow: auto;
-    height:calc(~'100% - 40px');
-    .app-search-input{
+  .app-search-input{
+    width:100%;
+    height:40px;
+    padding: 0 8px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    input{
       width:100%;
-      height:40px;
-      padding: 0 8px;
-      display:flex;
-      align-items: center;
-      justify-content: center;
-      input{
-        width:100%;
-        background: #333;
-        border: 1px solid transparent;
-        outline: none;
-        height:25px;
-        padding: 0 6px;
-        color:#fff;
+      background: #333;
+      border: 1px solid transparent;
+      outline: none;
+      height:25px;
+      padding: 0 6px;
+      color:#fff;
+      transition: .5s;
+      &:focus{
         transition: .5s;
-        &:focus{
-          transition: .5s;
-          border: 1px solid var(--theme-color);
-        }
+        border: 1px solid var(--theme-color);
       }
     }
+  }
+  .app-search-result-info{
+    padding:0px 10px;
+    height:30px;
+    display:flex;
+    align-items:center;
+    font-size:12px;
+    color:#fff;
+  }
+  .app-search-box{
+    overflow: auto;
+    width:100%;
+    height: calc(~'100% - 100px');
+    .yui-tree-node{
+      color: #ccc;
+    }
+    .yui-tree-node:hover{
+      background-color: #333;
+    }
+    .yui-tree-leaf-active{
+      background-color: #333;
+    }
+  }
+  .search-keyword-lighthigh{
+    background: var(--theme-color);
+    color:#fff;
   }
 }
 .app-search{
