--- a/src/component/sider-bar/search/index.less
+++ b/src/component/sider-bar/search/index.less
@@ -84,8 +84,22 @@
   }
 }
 .app-search{
+  .app-search-box{
+    .yui-tree-node{
+      color: #333;
+    }
+    .yui-tree-node:hover{
+      background-color: #eee;
+    }
+    .yui-tree-leaf-active{
+      background-color: #eee;
+    }
+  }
   .app-search-header-left{
     color:#1e1e1e !important;
+  }
+  .app-search-result-info{
+    color:#333 !important;
   }
   .app-search-header-right{
     .iconfont{
