--- a/src/app.less
+++ b/src/app.less
@@ -9,6 +9,9 @@
   -webkit-background-clip: padding;
   background-clip: padding-box;
 }
+.Pane2{
+  overflow: hidden;
+}
 .Resizer:hover {
   -webkit-transition: all 2s ease;
   transition: all 2s ease;
