--- a/www/skin/dark.css
+++ b/www/skin/dark.css
@@ -4,6 +4,18 @@ body{
   padding:0;
   margin:0;
 }
+::-webkit-scrollbar {/*滚动条整体样式*/
+  width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
+  height: 4px;
+}
+::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+  border-radius: 0;
+  background: #2d2d2d;
+}
+::-webkit-scrollbar-track {/*滚动条里面轨道*/
+  border-radius: 0;
+  background: #1e1e1e;
+}
 .load-spin{
   height:100vh;
   width:100vw;
