--- a/src/yui/popover/index.less
+++ b/src/yui/popover/index.less
@@ -14,7 +14,7 @@
     box-shadow: 0 0 2px 2px #121111;
     background: inherit;
     color: #fff;
-    position: absolute;
+    position: fixed;
     top: 0;
     border-radius: 2px;
     height: fit-content;
@@ -24,6 +24,7 @@
     align-items: center;
     justify-content: center;
     z-index:2;
+    background-color: #1e1e1e;
     .yui-popover-inner-layer{
       width: 100%;
       height: 100%;
@@ -32,7 +33,6 @@
       background: inherit;
     }
     .yui-popover-inner-content{
-      background-color: #1e1e1e;
       position: relative;
       z-index: 2;
     }
@@ -50,11 +50,9 @@
 }
 .yui-popover{
   .yui-popover-inner{
-    .yui-popover-inner-content{
-      background-color: #fff;
-    }
     box-shadow: 0 0 2px 2px #f3eeee;
     color: #333;
+    background-color: #fff;
     .yui-popover-inner-allow{
       box-shadow: 0 0 2px 2px #f3eeee;
       background: #fff;
