--- a/src/component/code/index.less
+++ b/src/component/code/index.less
@@ -1,6 +1,17 @@
 .app-code, .app-code-dark{
   height:100%;
   width:100%;
+  .app-code-none{
+    height:100%;
+    width:100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    .iconfont{
+      font-size:200px;
+      color:var(--theme-color);
+    }
+  }
   .app-tabs-menu{
     width: 80px;
     .app-tabs-menu-item:hover{
