--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -10,6 +10,7 @@
     justify-content: center;
     margin:5px 0;
     cursor: pointer;
+    position: relative;
     .iconfont{
       font-size:20px;
       color:#999;
