--- a/src/component/code/index.less
+++ b/src/component/code/index.less
@@ -9,7 +9,7 @@
     justify-content: center;
     .iconfont{
       font-size:200px;
-      color:var(--theme-color);
+      color:#111;
     }
   }
   .app-tabs-menu{
