--- a/src/component/code/index.less
+++ b/src/component/code/index.less
@@ -28,6 +28,11 @@
   }
 }
 .app-code{
+  .app-code-none{
+    .iconfont{
+      color:#888;
+    }
+  }
   .app-tabs-menu{
     .app-tabs-menu-item:hover{
       background: #aaa;
