--- a/www/skin/dark.css
+++ b/www/skin/dark.css
@@ -1,8 +1,12 @@
 body{
+  --theme-border-color: #2c76ca;
+  --theme-color: #2c76ca;
+  --theme-background-color: #2c76ca;
   background-color: #1e1e1e;
   overflow: hidden;
   padding:0;
   margin:0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 ::-webkit-scrollbar {/*滚动条整体样式*/
   width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
