--- a/www/skin/light.css
+++ b/www/skin/light.css
@@ -3,6 +3,10 @@ body{
   overflow: hidden;
   padding:0;
   margin:0;
+  --theme-border-color: #5e0b85;
+  --theme-color: #5e0b85;
+  --theme-background-color: #5e0b85;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 ::-webkit-scrollbar {/*滚动条整体样式*/
   width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
