--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -1,7 +1,7 @@
 .app-activity-bar, .app-activity-bar-dark{
   height:100%;
   width:50px;
-  background-color: #2a2a2a;
+  background-color: #333333;
   .app-activity-bar-item,.app-activity-bar-item-active{
     width:100%;
     height:50px;
