--- a/src/component/sider-bar/explorer/index.less
+++ b/src/component/sider-bar/explorer/index.less
@@ -83,3 +83,14 @@
     }
   }
 }
+.explorer-model-delete{
+  font-size:12px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  .iconfont{
+    color:#dfa529;
+    margin-right:10px;
+  }
+}
