--- a/src/component/sider-bar/explorer/index.less
+++ b/src/component/sider-bar/explorer/index.less
@@ -3,6 +3,9 @@
   width:100%;
   min-width: 200px;
   overflow: hidden;
+  input{
+    background: #444;
+  }
   .app-explorer-header{
     height:40px;
     display: flex;
@@ -77,10 +80,16 @@
   .app-explorer-header-left{
     color:#1e1e1e !important;
   }
+  .app-explorer-menu-item:hover{
+    background: #eee !important;
+  }
   .app-explorer-header-right{
     .iconfont{
       color:#1e1e1e !important;
     }
+  }
+  input{
+    background: #fafafa !important;
   }
 }
 .explorer-model-delete{
