--- a/src/component/sider-bar/git/index.less
+++ b/src/component/sider-bar/git/index.less
@@ -118,6 +118,9 @@
   .app-git-body-change-title{
     color:#1e1e1e !important;
   }
+  .app-git-menu-item:hover{
+    background: #eee !important;
+  }
   .app-git-input{
     input{
       background-color: #f2f2f2 !important;
