--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -2,6 +2,7 @@
   height:100%;
   width:50px;
   background-color: #333333;
+  position: relative;
   .app-activity-bar-item,.app-activity-bar-item-active{
     width:100%;
     height:50px;
@@ -21,9 +22,28 @@
       color:#fff;
     }
   }
+  .app-full-screen{
+    height: 40px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    .iconfont{
+      color: #aaa;
+      font-size: 20px;
+    }
+  }
 }
 .app-activity-bar{
   background-color: #fff;
+  .app-full-screen{
+    .iconfont{
+      color: #333;
+    }
+  }
   .app-activity-bar-item-active{
     .iconfont{
       color:#1e1e1e;
