--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -36,6 +36,21 @@
       font-size: 20px;
     }
   }
+  .app-activity-menu{
+    width: 100px;
+    font-size:12px;
+    div{
+      height:26px;
+      display:flex;
+      padding: 4px;
+      align-items: center;
+      width:100%;
+      color:#ddd;
+    }
+    div:hover{
+      background-color: #222;
+    }
+  }
 }
 .app-activity-bar{
   background-color: #fff;
@@ -51,5 +66,13 @@
   }
   .iconfont{
     color:#333;
+  }
+  .app-activity-menu{
+    div{
+      color:#333;
+    }
+    div:hover{
+      background-color: #eee;
+    }
   }
 }
