--- a/src/component/footer/index.less
+++ b/src/component/footer/index.less
@@ -1,4 +1,8 @@
 .app-footer, .app-footer-dark{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
   .icon-jiantou{
     font-size:12px;
   }
