--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -12,13 +12,13 @@
     margin:5px 0;
     cursor: pointer;
     position: relative;
-    .iconfont{
-      font-size:20px;
+    .codicon{
+      font-size:24px;
       color:#999;
     }
   }
   .app-activity-bar-item-active{
-    .iconfont{
+    .codicon{
       color:#fff;
     }
   }
@@ -31,7 +31,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    .iconfont{
+    .codicon{
       color: #aaa;
       font-size: 20px;
     }
@@ -55,16 +55,16 @@
 .app-activity-bar{
   background-color: #fff;
   .app-full-screen{
-    .iconfont{
+    .codicon{
       color: #333;
     }
   }
   .app-activity-bar-item-active{
-    .iconfont{
+    .codicon{
       color:#1e1e1e;
     }
   }
-  .iconfont{
+  .codicon{
     color:#333;
   }
   .app-activity-menu{
