--- a/src/component/sider-bar/git/index.less
+++ b/src/component/sider-bar/git/index.less
@@ -18,17 +18,18 @@
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+      color:#bbb;
     }
     .app-git-header-right{
       height: 40px;
       display:flex;
       align-items: center;
-      .iconfont{
-        font-size:18px;
+      .codicon{
+        font-size:16px;
         cursor: pointer;
         margin-left:16px;
       }
-      .iconfont:active{
+      .codicon:active{
         transform: scale(1.2)
       }
     }
@@ -111,7 +112,7 @@
     color:#1e1e1e !important;
   }
   .app-git-header-right{
-    .iconfont{
+    .codicon{
       color:#1e1e1e !important;
     }
   }
