--- a/src/component/sider-bar/search/index.less
+++ b/src/component/sider-bar/search/index.less
@@ -14,22 +14,19 @@
       font-size:12px;
       white-space: nowrap;
       text-overflow: ellipsis;
-      color:#fff;
+      color:#bbb;
     }
     .app-search-header-right{
       height: 40px;
       display:flex;
       align-items: center;
-      .iconfont{
-        font-size:18px;
+      .codicon{
+        font-size:16px;
         cursor: pointer;
         margin-left:16px;
         color:#fff;
       }
-      .icon-shanchu{
-        font-size:15px;
-      }
-      .iconfont:active{
+      .codicon:active{
         transform: scale(1.1)
       }
     }
@@ -102,7 +99,7 @@
     color:#333 !important;
   }
   .app-search-header-right{
-    .iconfont{
+    .codicon{
       color:#1e1e1e !important;
     }
   }
