--- a/src/component/sider-bar/explorer/index.less
+++ b/src/component/sider-bar/explorer/index.less
@@ -101,7 +101,7 @@
   display: flex;
   align-items: center;
   padding: 0 10px;
-  .codicon{
+  .iconfont{
     color:#dfa529;
     margin-right:10px;
   }
