--- a/src/component/sider-bar/explorer/index.less
+++ b/src/component/sider-bar/explorer/index.less
@@ -66,6 +66,11 @@
   .collapsed{
     transform: rotate(-90deg);
   }
+  .app-gitstatus-dot{
+    width:6px;
+    height:6px;
+    border-radius: 50%;
+  }
 }
 .app-explorer{
   .yui-tree-node{
