--- a/src/component/code/index.less
+++ b/src/component/code/index.less
@@ -1,6 +1,31 @@
 .app-code, .app-code-dark{
   height:100%;
   width:100%;
+  position: relative;
+  .yui-tabs-header{
+    width: calc(~'100% - 100px');
+  }
+  .app-code-tools{
+    position: absolute;
+    z-index: 9;
+    right:0;
+    top:0;
+    height:36px;
+    width: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding:0 10px;
+    background-color: #232323;
+    .codicon{
+      margin-left:10px;
+      color:#fff;
+      cursor: pointer;
+    }
+    .codicon:active{
+      transform: scale(1.1)
+    }
+  }
   .app-code-none{
     height:100%;
     width:100%;
