--- a/src/component/loader-panel/index.less
+++ b/src/component/loader-panel/index.less
@@ -1,4 +1,44 @@
-.app-loader-panel,app-loader-panel-dark{
+.app-loader-panel, .app-loader-panel-dark{
   width:100%;
   height:100%;
+  .app-loader-panel-header{
+    height:300px;
+    width:100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    .iconfont{
+      font-size:150px;
+      color:#111;
+    }
+  }
+  .app-loader-panel-message{
+    width:100%;
+    height:calc(~'100% - 300px');
+    display:flex;
+    justify-content: center;
+    .inner-box{
+      width:60%;
+      height:300px;
+      overflow: auto;
+      border: 1px solid #555;
+      padding:4 8px;
+      p{
+        font-size:12px;
+        padding:0;
+        margin:0;
+        height:26px;
+        display: flex;
+        align-items: center;
+        color:#888;
+      }
+    }
+  }
+}
+.app-loader-panel{
+  .app-loader-panel-header{
+    .iconfont{
+      color:#888;
+    }
+  }
 }
