主题存储+登录验证

--- a/src/component/code/index.less
+++ b/src/component/code/index.less
@@ -53,9 +53,16 @@
   }
 }
 .app-code{
+  background: #f7f7f7;
   .app-code-none{
     .iconfont{
       color:#888;
+    }
+  }
+  .app-code-tools{
+    background:#f7f7f7;
+    .codicon{
+      color:#333;
     }
   }
   .app-tabs-menu{
