--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -1,6 +1,6 @@
 .app-layout, .app-layout-dark{
-  height:100vh;
-  width:100vw;
+  height:100%;
+  width:100%;
   .app-layout-body{
     height:calc(~'100% - 22px');
     width:100%;
