--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -19,4 +19,27 @@
     display: flex;
     align-items: center;
   }
+  .workbench-open-project{
+    position: absolute;
+    width: 100%;
+    height:100%;
+    left:0;
+    top:0;
+    z-index: 9;
+    display: flex;
+    justify-content: center;
+    .workbench-open-project-box{
+      display: flex;
+      width:400px;
+      height: 32px;
+      justify-content: space-between;
+      .yui-input{
+        width: 78%;
+      }
+      .yui-btn{
+        width: 20%;
+        border-radius: 0;
+      }
+    }
+  }
 }
