--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -28,6 +28,8 @@
     z-index: 9;
     display: flex;
     justify-content: center;
+    align-items: center;
+    background: #2b2a2ab8;
     .workbench-open-project-box{
       display: flex;
       width:400px;
