--- a/src/component/sider-bar/explorer/index.less
+++ b/src/component/sider-bar/explorer/index.less
@@ -71,6 +71,13 @@
     height:6px;
     border-radius: 50%;
   }
+  .app-explorer-body-none{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:60px;
+  }
 }
 .app-explorer{
   .yui-tree-node{
