--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -9,9 +9,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin:5px 0;
     cursor: pointer;
     position: relative;
+    border-left: 2px solid #333;
     .codicon{
       font-size:24px;
       color:#999;
@@ -22,6 +22,7 @@
     }
   }
   .app-activity-bar-item-active{
+    border-left: 2px solid #fff;
     .codicon{
       color:#fff;
     }
