--- a/src/component/activity-bar/index.less
+++ b/src/component/activity-bar/index.less
@@ -59,13 +59,17 @@
   }
 }
 .app-activity-bar{
-  background-color: #fff;
+  background-color: #f6f6f6;
   .app-full-screen{
     .codicon{
       color: #333;
     }
   }
+  .app-activity-bar-item{
+    border-left: 2px solid #f6f6f6;
+  }
   .app-activity-bar-item-active{
+    border-left: 2px solid #999 !important;
     .codicon{
       color:#1e1e1e;
     }
