--- a/src/component/sider-bar/git/index.less
+++ b/src/component/sider-bar/git/index.less
@@ -97,6 +97,13 @@
       justify-content: space-between;
     }
   }
+  .app-git-body-none{
+    height:60px;
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .app-git{
   .yui-tree-node{
