--- a/src/component/login/index.less
+++ b/src/component/login/index.less
@@ -4,15 +4,82 @@
   justify-content: center;
   width: 100%;
   height:100%;
-  .app-login-box{
+  .app-login-left{
+    width:calc(100% - 300px);
+    height:100%;
+    background-color: #222;
+    position: relative;
+    img{
+      filter: brightness(0.16);
+      width: 200px;
+      position: absolute;
+      top:0px;
+      left:60px;
+    }
+    .app-login-left-title{
+      position: absolute;
+      top:100px;
+      left:280px;
+      color:#aaa;
+    }
+  }
+  .app-login-right{
+    width:400px;
+    height:100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    .yui-input{
-      width: 240px;
-      .iconfont{
-        cursor: pointer;
+    background-color: #181818;
+    position: relative;
+    .app-login-box{
+      padding: 20px;
+      height: 420px;
+      width: 360px;
+      box-shadow: 0 0 8px 2px #171616;
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      position: relative;
+      right: 180px;
+      background-color: #1e1e1e;
+      .app-login-logo{
+        height:180px;
+        width:100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .iconfont{
+          font-size: 120px;
+          color: #111;
+        }
+      }
+      .app-login-user{
+        input{
+          margin: 16px 0;
+        }
+      }
+      .app-login-footer{
+        height:100px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        width:100%;
+      }
+      .yui-input{
+        width: 260px;
+        input{
+          background-color: #202020;
+          border-color: #222;
+        }
+        input:hover{
+          border-color: var(--theme-color);
+        }
+        .iconfont{
+          cursor: pointer;
+        }
       }
     }
   }
+  
 }
